--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 argon2 = "0.5.2"
-axum = "0.6.20"
+axum = {version = "0.6.20", features = ["headers"]}
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
